Maybe this will work?

--- a/md/index.html
+++ b/md/index.html
@@ -107,10 +107,7 @@
         // var mes = $("#message");
         var mes = document.getElementById("message").value;
         console.log(mes);
-        var body = "message: ";
-        body.concat(ar);
-        body.concat(dep);
-        body.concat(mes);
+        var body = ar . " " . dep . " " . mes;
         console.log(body);
       }
     </script>
