Stop using the wrong operator

--- a/md/index.html
+++ b/md/index.html
@@ -107,7 +107,7 @@
         // var mes = $("#message");
         var mes = document.getElementById("message").value;
         console.log(mes);
-        var body = ar . " " . dep . " " . mes;
+        var body = ar + " " + dep + " " + mes;
         console.log(body);
       }
     </script>
