See if jQuery works

--- a/md/index.html
+++ b/md/index.html
@@ -98,8 +98,8 @@
     <!-- button to send email the other way -->
     <script type="text/javascript">
       function sendMsg() {
-        // var ar = $("#arrival");
-        var ar = document.getElementById("arrival").value;
+        var ar = $("#arrival").value;
+        // var ar = document.getElementById("arrival").value;
         console.log(ar);
         // var dep = $("#departure");
         var dep = document.getElementById("departure").value;
