--- a/md/index.html
+++ b/md/index.html
@@ -104,7 +104,7 @@
         console.log(dep);
         var mes = document.getElementById("message").value;
         console.log(mes);
-        var body = "Arrival: " + arr + "\nDeparture: " + dep + "\nMessage: " + mes;
+        var body = "Arrival: " + ar + "\nDeparture: " + dep + "\nMessage: " + mes;
         console.log(body);
         var subject = "Mother's Day Visitation Request";
         window.open("mailto:jabocg@gmail.com?subject=" + subject + "?body=" + body);
