--- a/md/index.html
+++ b/md/index.html
@@ -107,7 +107,7 @@
         var body = "Arrival: " + ar + "\nDeparture: " + dep + "\nMessage: " + mes;
         console.log(body);
         var subject = "Mother's Day Visitation Request";
-        window.open("mailto:jabocg@gmail.com?subject=" + subject + "?body=" + body);
+        window.open("mailto:jabocg@gmail.com?subject=" + subject + "&body=" + body);
       }
     </script>
   </body>
