Update to add newlines

--- a/md/index.html
+++ b/md/index.html
@@ -104,9 +104,9 @@
         console.log(dep);
         var mes = document.getElementById("message").value;
         console.log(mes);
-        var body = "Arrival: " + ar + "\nDeparture: " + dep + "\nMessage: " + mes;
+        var body = "Arrival: " + ar + "%0A" + "Departure: " + dep + "%0A" + "Message: " + mes;
         console.log(body);
-        var subject = "Mother's Day Visitation Request";
+        var subject = "Mothers Day Visitation Request";
         window.open("mailto:jabocg@gmail.com?subject=" + subject + "&body=" + body);
       }
     </script>
