--- a/azile.html
+++ b/azile.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <script type='text/javascript' src='activity3.js'></script>
+    <script type='text/javascript' src='azile.js'></script>
   </head>
   <body>
     <textarea id='aziletext' readonly=true rows=30 cols=100></textarea>
