Add #SAVENETNEUTRALITY script

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 
     <!-- Canonical links -->
     <link rel="canonical" href="https://jabocg.com/" />
+    <script>var _bftn_options = { theme: 'glitch' };</script><script src="https://widget.battleforthenet.com/widget.js" async></script>
   </head>
   <body>
 
